# audio2ay3

./: .gitignore  README.md  _yourmt3_last_output.mid  convert_all.bat  convert_all_demucs6.bat  convert_all_demucs6_dual.bat  convert_all_demucs6_dual_.bat  convert_all_demucs_tf.bat  convert_all_demucs_tf_dual.bat  convert_all_stems_dual.bat  convert_all_ymt3+_dual.bat  convert_all_ymt3plus_dual.bat  convert_all_ymt3plus_dual.md  convert_one_stemed_demucs_tf_dual.bat  pyproject.toml
design/: 01-overview-goals-scope.md  02-ay-3-8910-reference.md  03-ym-format-reference.md  04-system-architecture.md  05-emulator-design.md  06-conversion-pipeline.md  07-sound-quality-strategy.md  08-cli-design.md  09-performance-acceleration.md  10-testing-validation.md  11-scalability.md  12-tech-stack-dependencies.md  13-implementation-roadmap.md  README.md  imitating_instruments.md
docs/: cli.md  installation.md
results/YMT3_plus/: Dungeon_Ore.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ym  log-Goblins_Lair.txt  log-The_Forgotten_Sanctum.txt
results/demucs-ft/: Dungeon_Ore.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ym
results/demucs-ft_dual/: 00.ay2.ym  00.ym  01.ay2.ym  01.ym  02.ay2.ym  02.ym  03.ay2.ym  03.ym  04.ay2.ym  04.ym  05.ay2.ym  05.ym  8-BitNostalgia.ay2.ym  8-BitNostalgia.ym  Dungeon_Ore.ay2.ym  Dungeon_Ore.ym  Goblins_Lair.ay2.ym  Goblins_Lair.ym  PixelQuest(1).ay2.ym  PixelQuest(1).ym  PixelQuest.ay2.ym  PixelQuest.ym  Pixel_Hearthbeat.ay2.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ay2.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ay2.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ay2.ym  The_Last_Pixel.ym
results/demucs-ft_dual/long_real/: 00.mid
results/demucs-ft_dual_arpeggio/: 00.ay2.ym  00.ym  01.ay2.ym  01.ym  02.ay2.ym  02.ym  03.ay2.ym  03.ym  04.ay2.ym  04.ym  05.ay2.ym  05.ym  8-BitNostalgia.ay2.ym  8-BitNostalgia.ym  Dungeon_Ore.ay2.ym  Dungeon_Ore.ym  Goblins_Lair.ay2.ym  Goblins_Lair.ym  PixelQuest(1).ay2.ym  PixelQuest(1).ym  PixelQuest.ay2.ym  PixelQuest.ym  Pixel_Hearthbeat.ay2.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ay2.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ay2.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ay2.ym  The_Last_Pixel.ym
results/demucs-ft_dual_old/: 00.ay2.ym  00.ym  01.ay2.ym  01.ym  02.ay2.ym  02.ym  03.ay2.ym  03.ym  04.ay2.ym  04.ym  05.ay2.ym  05.ym  8-BitNostalgia.ay2.ym  8-BitNostalgia.ym  Dungeon_Ore.ay2.ym  Dungeon_Ore.ym  Goblins_Lair.ay2.ym  Goblins_Lair.ym  PixelQuest(1).ay2.ym  PixelQuest(1).ym  PixelQuest.ay2.ym  PixelQuest.ym  Pixel_Hearthbeat.ay2.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ay2.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ay2.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ay2.ym  The_Last_Pixel.ym
results/demucs6/: Dungeon_Ore.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ym
results/demucs6_dual/: Dungeon_Ore.ay2.ym  Dungeon_Ore.ym  Goblins_Lair.ay2.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ay2.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ay2.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ay2.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ay2.ym  The_Last_Pixel.ym
results/long/: Dungeon_Ore.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ym
results/mt3/long-v2/: Pixel_Hearthbeat-explain.txt  Pixel_Hearthbeat.ym  The_Dragons_Lair-explain.txt  The_Dragons_Lair.ym  (+4 more)
results/stems_dual/: 8-Bit Nostalgia.ay2.vtx  8-Bit Nostalgia.ay2.ym  8-Bit Nostalgia.vtx  Coin Drop Warning.ay2.vtx  Coin Drop Warning.ay2.ym  Coin Drop Warning.vtx  Coin Drop Warning.ym  Coin Drop Warning2.vtx  Game Over Screen.ay2.vtx  Game Over Screen.ay2.ym  Game Over Screen.vtx  Game Over Screen.ym  Goblin's Lair.ay2.vtx  Goblin's Lair.ay2.ym  Goblin's Lair.vtx  Goblin's Lair.ym  Pixel Cave Drift.vtx  Pixel Drift.ay2.vtx  Pixel Drift.ay2.ym  Pixel Drift.vtx  Pixel Drift.ym  Pixel Drift2.vtx  Pixel Drift3.vtx  Pixel Drift4.vtx  Pixel Goodbye.ay2.vtx  Pixel Goodbye.ay2.ym  Pixel Goodbye.vtx  Pixel Goodbye2.vtx  Pixel Harbor.ay2.vtx  Pixel Harbor.ay2.ym  Pixel Harbor.vtx  Pixel Harbor.ym  Pixel Harbor2.vtx  Pixel Lantern.ay2.vtx  Pixel Lantern.ay2.ym  Pixel Lantern.vtx  Pixel Lantern2.vtx  Pixel Quest.ay2.vtx  Pixel Quest.ay2.ym  Pixel Quest.vtx  (+28 more)
results/stems_dual_old/: 8-Bit Nostalgia.ay2.ym  8-Bit Nostalgia.ym  Coin Drop Warning.ay2.ym  Game Over Screen.ay2.ym  Goblin's Lair.ay2.ym  Pixel Drift.ay2.ym  Pixel Goodbye.ay2.ym  Pixel Goodbye.ym  Pixel Harbor.ay2.ym  Pixel Lantern.ay2.ym  Pixel Lantern.ym  Pixel Quest.ay2.ym  Pixel Quest.ym  Press Start Goodbye.ay2.ym  Red Alarm Loop.ay2.ym  Red Warning Run.ay2.ym  Start Button.ay2.ym  Start Button.ym  Vault of Pebble Keys.ay2.ym  Восемь Бит.ay2.ym  Восемь Бит.ym
results/voice_contention/: Dungeon_Ore-contention.txt  Goblins_Lair-contention.txt  Pixel_Hearthbeat-contention.txt  The_Dragons_Lair-contention.txt  The_Forgotten_Sanctum-contention.txt  The_Last_Pixel-contention.txt
results/ymt3plus_dual/: Dungeon_Ore.ay2.ym  Dungeon_Ore.ym  Goblins_Lair.ay2.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ay2.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ay2.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ay2.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ay2.ym  The_Last_Pixel.ym
results/yourmt3/: _yourmt3_last_output.mid
samples/long/: 02.m4a  03.m4a  04.m4a  05.m4a  ducktails_title_theme.m4a
samples/long_chiptunes/: 01.m4a
samples/long_real/: 01.m4a  02.m4a  03.m4a
scripts/: convert_long_dual.py  convert_long_ymt3plus_dual.py
src/audio2ay3/: __init__.py  __main__.py  cli.py  config.py  explain.py  pipeline.py  progress.py
tests/: test_chip.py  test_cli.py  test_contention.py  test_dual_chip.py  test_dynamics.py  test_encode.py  test_explain.py  test_load_audio.py  test_mapping.py  test_midi_export.py  test_mt3.py  test_percussion_detect.py  test_pipeline.py  test_progress.py  test_render.py  test_separate.py  test_voices.py  test_ymformat.py  test_yourmt3.py
(+36 files in other folders)
