[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio2ay3"
version = "0.1.0"
description = "Convert instrumental audio into a 50 Hz AY-3-8910 register stream, and emulate YM register streams back to audio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
]

[project.optional-dependencies]
mp3 = ["lameenc>=1.7"]
audio = ["soundfile>=0.12"]
# MIDI export of the pre-arrangement transcription (audio2ay3 convert --save-midi). mido is a
# small pure-Python dependency with no native build, so this extra is cheap to install.
midi = ["mido>=1.3"]
# Neural analysis stack (default conversion path; heavy, opt-in to install).
# Python 3.11: `pip install -e ".[neural]"` resolves cleanly.
# Python 3.12: basic-pitch 0.4.0 pins tensorflow>=2.4.1,<2.15.1 (no 3.12 wheels exist in that
# range), so the plain install fails. We use the ONNX model, not TF, so install basic-pitch with
# `--no-deps` plus its real runtime deps instead (see README "Python 3.12: installing the neural
# extra"). basic-pitch>=0.4.0 is pinned so 3.12 fails loudly rather than silently backtracking
# into ancient releases that need numpy<1.24 (which collides with our numpy>=1.26).
neural = ["demucs", "basic-pitch>=0.4.0", "onnxruntime", "soundfile>=0.12"]
# MT3 multi-instrument transcription (Google Magenta). HEAVIEST path, fully opt-in; never touched
# by the default conversion or the test suite. `mt3` (and its dep `t5x`) are not on PyPI; the
# authoritative install is mt3's own setup.py, which drags the rest of the stack
# (t5x + flax + seqio + t5 + note-seq + tensorflow + tensorflow-datasets, and jax via flax):
#   pip install "mt3 @ git+https://github.com/magenta/mt3"   # pulls t5x/flax/seqio/t5/tf/...
#   set AUDIO2AY3_MT3_CHECKPOINT=<dir of a checkpoint from gs://mt3/checkpoints>  # gsutil/https
# Platform: JAX *does* ship native Windows x86_64 CPU wheels (experimental), so JAX itself is not
# the blocker. The blocker is `tensorflow-text` (required transitively by t5/seqio): it publishes
# Linux + macOS-ARM wheels only — no win_amd64 wheel and no sdist — so the MT3 stack cannot
# pip-install on native Windows. Run it under WSL2 or Linux. The pinned versions in mt3's colab
# matter (t5x/jax/flax break across releases); prefer following that colab's exact pins.
# This extra is just the convenience subset that is on PyPI; you still need the git install above.
mt3 = ["jax", "note-seq", "seqio", "t5", "gin-config", "tensorflow", "librosa"]
# YourMT3+ multi-instrument transcription (mimbres). MT3-class quality on a *pure PyTorch* stack
# (no JAX/t5x/tensorflow-text), so unlike the mt3 extra it pip-installs on NATIVE WINDOWS. Fully
# opt-in; never touched by the default conversion or the test suite. This extra is only the
# pip-installable runtime stack — the model code itself is GPL-3.0 and is NOT bundled here (this
# project is MIT). The setup helper clones it onto your machine and wires it up:
#   pip install -e ".[yourmt3]"                                   # the PyTorch runtime below
#   audio2ay3 setup-yourmt3                                       # clones GPL model code + checkpoints
#   audio2ay3 convert <audio> --transcription yourmt3            # no env vars needed after setup
# CPU inference works (fp32, slow); GPU uses fp16. See audio2ay3/analysis/_yourmt3_infer.py.
# NOTE: torchmetrics is capped <1.7 on purpose — 1.7+ eagerly imports torchvision (the ARNIQA
# metric) when pytorch_lightning loads, which hard-crashes on any torch/torchvision version skew.
# YourMT3 inference never uses torchvision, so the cap removes that whole failure mode.
yourmt3 = [
    "torch", "torchaudio", "lightning>=2.2.1", "torchmetrics<1.7",
    "transformers==4.45.1", "numpy==1.26.4",
    "einops", "mido", "librosa", "pretty_midi", "wandb",
]
dev = ["pytest>=8", "pytest-xdist", "ruff", "mypy"]

[project.scripts]
audio2ay3 = "audio2ay3.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audio2ay3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src"]
